Fix text color when dark mode is active.

--- a/assets/css/ie-editor.css
+++ b/assets/css/ie-editor.css
@@ -377,10 +377,17 @@ a:hover {
 }
 
 .wp-block-button__link:focus {
-	color: #39414d;
 	background: transparent;
 	outline-offset: -6px;
 	outline: 2px dotted currentColor;
+}
+
+.has-background-dark .wp-block-button__link:focus {
+	color: #39414d;
+}
+
+.wp-block-button__link:focus:not(.has-background) {
+	color: #39414d;
 }
 
 .wp-block-button__link:disabled {
@@ -804,10 +811,17 @@ a:hover {
 }
 
 .wp-block-file .wp-block-file__button:focus {
-	color: #39414d;
 	background: transparent;
 	outline-offset: -6px;
 	outline: 2px dotted currentColor;
+}
+
+.has-background-dark .wp-block-file .wp-block-file__button:focus {
+	color: #39414d;
+}
+
+.wp-block-file .wp-block-file__button:focus:not(.has-background) {
+	color: #39414d;
 }
 
 .wp-block-file .wp-block-file__button:disabled {
@@ -2123,10 +2137,17 @@ pre.wp-block-preformatted {
 }
 
 .wp-block-search .wp-block-search__button:focus {
-	color: #39414d;
 	background: transparent;
 	outline-offset: -6px;
 	outline: 2px dotted currentColor;
+}
+
+.has-background-dark .wp-block-search .wp-block-search__button:focus {
+	color: #39414d;
+}
+
+.wp-block-search .wp-block-search__button:focus:not(.has-background) {
+	color: #39414d;
 }
 
 .wp-block-search .wp-block-search__button:disabled {
