--- a/assets/sass/02-tools/mixins.scss
+++ b/assets/sass/02-tools/mixins.scss
@@ -58,10 +58,17 @@
 	padding: var(--button--padding-vertical) var(--button--padding-horizontal);
 
 	&:focus {
-		color: var(--button--color-text-hover);
 		background: transparent;
 		outline-offset: -6px;
 		outline: 2px dotted currentColor;
+
+		.has-background-dark & {
+			color: var(--button--color-background);
+		}
+
+		&:not(.has-background) {
+			color: var(--button--color-text-hover);
+		}
 	}
 
 	&:disabled {
